<resources>
    <string name="app_name">OpenAPISDK</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="title_activity_song_display">SongDisplayActivity</string>
    <string name="title_activity_folder">FolderActivity</string>
    <!--  activity_gaode_test.xml  -->
    <string name="btn_trans_play_first_time">地图测试-模拟地图首次起播</string>
    <string name="btn_trans_play">地图测试-模拟地图切换歌单播放</string>
    <string name="btn_map_test_songInfo">地图测试-歌曲数量准确且可播放</string>
    <string name="btn_map_test_my_fav">地图测试-播放我喜欢</string>
    <string name="btn_map_test_recently">地图测试-播放最近播放</string>
    <string name="btn_map_test_daily30">地图测试-播放每日30首</string>
    <string name="btn_map_test_login">登录</string>
    <string name="btn_gaode_test_loginout">退出登录</string>
    <string name="login_status">未登录</string>
    <string name="headIcon_ImageView">用户头像</string>
    <string name="vipIcon_ImageView">身份位图标</string>
    <string name="textView2">需要登录态：</string>
    <string name="textView3">无需登录态：</string>
    <string name="btn_map_fav">收藏歌曲</string>
    <string name="textViewSetting">其他设置:</string>
    <string name="btn_map_test_clear_all_cache">清理缓存</string>
    <string name="btn_map_test_rebuild">销毁SDK重新初始化</string>
    <string name="long_audio_recent_album">专辑：%1$s(%2$s)</string>
    <string name="long_audio_recent_time">最近播放：%1$s</string>
    <string name="recent_play_all">最近播放全部</string>
    <string name="recent_play_all_song_summary">已播歌曲</string>
    <string name="recent_play_all_song_desc">歌曲数：%1$d</string>
    <string name="recent_play_all_album_desc">专辑歌手：%1$s，歌曲数：%2$d</string>
    <string name="recent_play_all_folder_desc">创建者：%1$s，歌曲数：%2$d</string>
    <string name="recent_play_all_long_audio_desc">长音频：%1$s，作者：%2$s</string>
    <string name="collected_singer_total_count">关注歌手总数：%1$d</string>
</resources>
